--- a/src/Abm.Sparked.eRequesting.Demo.WebApp.Client/Layout/NavMenu.razor
+++ b/src/Abm.Sparked.eRequesting.Demo.WebApp.Client/Layout/NavMenu.razor
@@ -1,5 +1,4 @@
 ﻿<MudNavMenu>
-    @* <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink> *@
-    @* <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink> *@
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.List">ServiceRequests</MudNavLink>
+    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.MedicalServices">ServiceRequests</MudNavLink>
+    <MudNavLink Href="tasks" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TaskAlt">Tasks</MudNavLink>
 </MudNavMenu>
